core-macros/tests/compile_fail/scope_by_missing_field.rs
// `scope_by` must name a real field of the struct.

use nauka_core_macros::resource;

#[resource(table = "t", scope = "cluster", scope_by = "ghost")]
struct T {
    #[id]
    pub key: String,
}

fn main() {}
